# FaceDetection

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: build.yml
src/: main.cpp
